@@ -27,7 +27,13 @@ htags_DEPENDENCIES = $(LDADD)
 man_MANS = htags.1
 
 gtagsdir = ${datadir}/gtags
-gtags_DATA = global.cgi.tmpl completion.cgi.tmpl \
-	jscode_suggest.tmpl jscode_treeview.tmpl style.css.tmpl
-EXTRA_DIST = $(man_MANS) $(gtags_DATA) manual.in global.cgi.tmpl.in completion.cgi.tmpl.in \
+gtags_DATA = global.cgi completion.cgi \
+	jscode_suggest jscode_treeview style.css
+EXTRA_DIST = $(man_MANS) $(gtags_DATA) manual.in global.cgi.in completion.cgi.in \
 		const.h c.l cpp.l java.l php.l asm.l
+# CGI scripts
+convert=sed -e 's!@PERLPATH@!$(PERL)!g' -e 's!@GLOBALPATH@!$(bindir)/global!g'
+global.cgi: global.cgi.in
+	$(convert) $< > $@
+completion.cgi: completion.cgi.in
+	$(convert) $< > $@
